# blake

./: .gitignore  pyproject.toml
blake/: super_important.py
data/: coffee.csv
notebooks/: another_notebook.ipynb  csv_to_parquet.ipynb  read_parquet.ipynb  some_pandas_fun.ipynb
tests/: test_blake.py  test_super_important.py
